23 April, 2001:  [v0.1.0]
	Ported to Redhat Linux

24 April 2001: [v0.1.1]
	Makefile maintenance: specified gzip suffix.

15 November 2001: [v0.1.2]
	Fix Makefile.  Install section wasn't creating directories.

4 June 2002: [v0.2.0]
	Added functions ran1, gasdev, bingdev to library.
	Added simbindist to package.
	Modifies Makefile accordingly.

23 July 2002: [v0.2.1]
	Added functions poidev, gamdev

24 February 2006: [v0.2.2]
	add install-all rule. run ranlib on lib after installation (for
	Darwin ld). 