@@ -1,1 +1,2 @@
 - documentation
+- Use UNAME to set OS.
