@@ -18,3 +18,6 @@
 24 February 2006: [v0.2.2]
 	add install-all rule. run ranlib on lib after installation (for
 	Darwin ld). 
+22 May 2006: [v0.2.3]
+	Use HOME to set PREFIX. Unable to use UNAME to set OS, yet; added
+	to TODO.
